<resources>
    <string name="app_name">ComidaRD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_main_drawer_map">Mapa de sitios</string>
    <string name="title_main_drawer_add">Sugerir sitio</string>
    <string name="title_main_drawer_ranking">Sitios mejores valorados</string>
    <string name="share">¡Compartir App!</string>
    <string name="send">¡Enviar App a un amigo!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="mail">comidard@gmail.com</string>
    <string name="GPSAlertDialogTitle">Titulo</string>
    <string name="phone"> Teléfono </string>
    <string name="GPSAlertDialogMessage">Mensaje</string>
    <string name="ok">OK</string>
    <string name="label_cancel">label</string>
    <string name="nameService">Nombre Producto</string>
    <string name="msInternetNoConnection">No hay conexión a internet.</string>
    <string name="message">Mensaje</string>
    <string name="help">Ayuda</string>
    <string name="location_info">Ubicación</string>
    <string name="select_location_info">Por favor seleccionar la ubicación del local</string>
    <string name="price">Precio</string>
    <string name="iGotIt">¡Entiendo!</string>
    <string name="selectPositionHelp">Toca para seleccionar la ubicación deseada, luego presionar el boton seleccionar ubicación.\n\nNo te preocupes si el  punto no está en la ubicación  exacta, es  una aproximación de la dirección, nuestro equipo se encargara de verificar la veracidad de los datos.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lblAdd">Agregar</string>
    <string name="suggest_info">Sugerir</string>
    <string name="cancel">Cancelar</string>

    <!-- Strings related to Settings -->
    <string name="thanksForSubmitInfo">Gracias por ser parte de la comunidad de colaboradores, ¡tu ayuda es bien recibida!.
\n\nTodos los datos  suministrados son enviados de manera anónima y serán evaluados por nuestro equipo, para su posible publicación.
</string>
    <!--     Errors Messages  -->

    <string name="msErrorEmptyField">Debes Completar el  campo.</string>
    <string name="msErrorMultipleChoiceInvalid">¡Debes seleccionar al menos una opción!</string>

    <!--     Errors Messages  -->

    <!--     Messages  -->
    <string name="creditCards">Tarjetas de crédito</string>
    <string name="thanksContibution">Gracias por tu Aporte</string>
    <string name="SeciceSuggested">Sugerir</string>
    <string name="selectPosition">Seleccionar Posición</string>
    <string name="helpAvailability">A través de esta opción puedes ver la disponibilidad de un local es decir, si está lleno, medio o  vacío.\n\nTambién puedes  colaborar reportando la disponibilidad, si estás  en las cercanías de  este local, presionando el botón reportar, así puedes compartir la información con otros usuarios.\n\nLa disponibilidad es calculada en base a los reportes de los usuarios, mientras más reportes hayan en menor tiempo, más confiable será la información.\n\nSolo los locales que están suscritos al servicio de disponibilidad en línea pueden brindar información totalmente confiable, los demás solo pueden  brindar estimados en base a los reportes de los usuarios.</string>
    <string name="youCantReportAvailability">Para poder reportar debes estar a una distancia no mayor al alcance de una red inalámbrica Wi-Fi, específicamente  100 metros.</string>
    <string name="TelephoneSuggested">Sugerir</string>
    <string name="CreditCardSuggested">Sugerir</string>
    <string name="ImageSuggested">Sugerir Imagen </string>
    <string name="notAvailable">No disponible</string>
    <string name="showAvailability">Mostrar Disponibilidad</string>

    <string-array name="credit_cards_type" translatable="false">
        <item>Visa</item>
        <item>Master Card</item>
        <item>American Express</item>
        <item>Discover</item>
    </string-array>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="spinnerItems">
        <item>Restaurante</item>
        <item>Comida rapida</item>
        <item>Otro</item>
    </string-array>

    <string-array name="motels_services_currency_type">
        <item>Pesos (RD$)</item>
        <item>Dolares (USD$)</item>
        <item>Euros (EU$)</item>
    </string-array>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_suggest_place">Map</string>


    <string name="image_description">Descripción de la imagen sugerida</string>
    <string name="description_hint">Escriba una descripción..</string>
    <string name="title_activity_show_image">show_image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_user">Cambiar cuenta</string>
    <string name="google_api_user_key">224098914874-v53bv24ili6ik7i8u6bof8bkqlqal6ar.apps.googleusercontent.com</string>
    <string name="nombre">Nombre</string>
    <string name="datos_del_sitio">Datos del sitio</string>
    <string name="rating_layout">Escriba una reseña sobre este sitio</string>
    <string name="toggle_button_delivery_yes">Si</string>
    <string name="toggle_button_delivery_no">No</string>
    <string name="available_delivery">Delivery disponible</string>
    <string name="not_available_delivery">Delivery NO disponible</string>
    <string name="menu_not_available">No menu disponible actualmente</string>
    <string name="share_app">Desgarga la app</string>
    <string name="google_direction_key">AIzaSyAseOR6uttx9_AMO89pcG2WzaT-Bl6zMWA</string>
    <string name="image_not_storage">No existen imagenes registradas, sé el primero en colaborar</string>
    <string name="str_suggest">Sugerir</string>
    <string name="direction_not_found">Lat %1$d Lon %2$d</string>
    <string name="no_credit_cards">No se acepta tarjetas de credito</string>
    <string name="not_telephone_registered">No existen telefonos  registrados</string>
    <string name="photos_count">%1$s foto/s</string>


</resources>
